@@ -2,9 +2,13 @@ import pytest
 import asyncio
 import socket
 import ipaddress
-import aiodns
 from aiohttp.resolver import AsyncResolver, DefaultResolver
-from unittest.mock import patch, Mock
+from unittest.mock import patch
+
+try:
+    import aiodns
+except ImportError:
+    aiodns = None
 
 
 class FakeResult:
@@ -18,10 +22,12 @@ def loop():
     asyncio.set_event_loop(None)
     return loop
 
+
 @asyncio.coroutine
 def fake_result(result):
     return [FakeResult(host=h)
             for h in result]
+
 
 def fake_addrinfo(hosts):
     @asyncio.coroutine
@@ -30,10 +36,12 @@ def fake_addrinfo(hosts):
             raise socket.gaierror
 
         return list([(None, None, None, None, [h, 0])
-                for h in hosts])
+                     for h in hosts])
 
     return fake
 
+
+@pytest.mark.skipif(aiodns is None, reason="aiodns required")
 def test_async_resolver_positive_lookup(loop):
     @asyncio.coroutine
     def go():
@@ -44,6 +52,8 @@ def test_async_resolver_positive_lookup(loop):
             ipaddress.ip_address(real[0]['host'])
     loop.run_until_complete(go())
 
+
+@pytest.mark.skipif(aiodns is None, reason="aiodns required")
 def test_async_resolver_multiple_replies(loop):
     @asyncio.coroutine
     def go():
@@ -56,6 +66,8 @@ def test_async_resolver_multiple_replies(loop):
             assert len(ips) > 3, "Expecting multiple addresses"
     loop.run_until_complete(go())
 
+
+@pytest.mark.skipif(aiodns is None, reason="aiodns required")
 def test_async_negative_lookup(loop):
     @asyncio.coroutine
     def go():
@@ -70,6 +82,7 @@ def test_async_negative_lookup(loop):
 
     loop.run_until_complete(go())
 
+
 def test_default_resolver_positive_lookup(loop):
     @asyncio.coroutine
     def go():
@@ -79,6 +92,7 @@ def test_default_resolver_positive_lookup(loop):
         ipaddress.ip_address(real[0]['host'])
 
     loop.run_until_complete(go())
+
 
 def test_default_resolver_multiple_replies(loop):
     @asyncio.coroutine
@@ -90,6 +104,7 @@ def test_default_resolver_multiple_replies(loop):
         ips = [ipaddress.ip_address(x['host']) for x in real]
         assert len(ips) > 3, "Expecting multiple addresses"
     loop.run_until_complete(go())
+
 
 def test_default_negative_lookup(loop):
     @asyncio.coroutine
